--- a/lib/head.html
+++ b/lib/head.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title>$TITLE</title>
+
   <meta charset="UTF-8">
+
   <link href="style/reset.css" rel="stylesheet" type="text/css" />
   <link href="style/style.css" rel="stylesheet" type="text/css" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <div id="content">
